; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_subr.c_t1_get_board_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_subr.c_t1_get_board_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.board_info = type { i32 }

@t1_board = common dso_local global %struct.board_info* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.board_info* @t1_get_board_info(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load %struct.board_info*, %struct.board_info** @t1_board, align 8
  %5 = call i32 @ARRAY_SIZE(%struct.board_info* %4)
  %6 = icmp ult i32 %3, %5
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.board_info*, %struct.board_info** @t1_board, align 8
  %9 = load i32, i32* %2, align 4
  %10 = zext i32 %9 to i64
  %11 = getelementptr inbounds %struct.board_info, %struct.board_info* %8, i64 %10
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %7
  %14 = phi %struct.board_info* [ %11, %7 ], [ null, %12 ]
  ret %struct.board_info* %14
}

declare dso_local i32 @ARRAY_SIZE(%struct.board_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
